# dns_client

./: CMakeLists.txt  README.md  dns_client.vix  vix.json
examples/: resolve.cpp  resolve_async.cpp  resolve_ipv4.cpp
include/dns_client/: dns_client.hpp
tests/: test_basic.cpp
